--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite": "^5.0.12"
   },
   "dependencies": {
-    "babylonjs": "^6.41.0"
+    "babylonjs": "^6.41.0",
+    "colyseus.js": "^0.15.17"
   }
 }
