--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
   ],
   "devDependencies": {
     "typescript": "^5.3.3",
-    "vite": "^5.1.2"
+    "vite": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
+    "vue": "^3.4.19",
     "@babylonjs/core": "^6.43.0",
     "@babylonjs/inspector": "^6.43.0",
     "@babylonjs/loaders": "^6.43.0",
