--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite --open",
     "build": "vue-tsc && vite build",
-    "preview": "vue-tsc && vite build && vite preview --host --open"
+    "preview": "vue-tsc && vite build && vite preview --host --open",
+    "startTraining": "tsx StartTrainingConsole.ts"
   },
   "typeRoots": [
     "node_modules/@types",
@@ -16,6 +17,7 @@
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.2",
     "vue-tsc": "^1.8.27"
@@ -24,8 +26,9 @@
     "@babylonjs/core": "^6.43.0",
     "@babylonjs/inspector": "^6.43.0",
     "@babylonjs/loaders": "^6.43.0",
+    "bun-types": "^1.1.1",
     "colyseus.js": "^0.15.18",
-    "neat_net-js": "^1.0.14",
+    "neataptic": "^1.4.7",
     "vue": "^3.4.19"
   }
 }
